--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /ListaExercicios01/build/
 /aula04/nbproject/private/
 /aula04/build/
+/aula05/nbproject/private/
+/aula06/nbproject/private/
+/aula06/build/
+/Algoritmos2/nbproject/private/
+/Algoritmos2/build/
+/centroGravidadeMatriz/nbproject/private/
+/centroGravidadeMatriz/build/
